testsuite/tests/explicit-dicts/should_fail/Incoherence3.stderr

Incoherence3.hs:10:12: error: [-Wincoherence (in -Wdefault), -Werror=incoherence]
    • Explicit dictionary application to: ‘Eq a’
      is not allowed because of possible incoherence:
        ‘Eq a’ is entailed by the remainder of the context: ‘(a ~ b, Eq b)’
    • In the expression: foo dict
      In an equation for ‘bar’: bar dict = foo dict
